--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,16 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Spotify Clone</title>
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        background-color: #121212;
-      }
-      #root {
-        display: flex;
-        height: 100%;
-      }
-    </style>
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Spotify Web Clone" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Spotify Web Clone</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html> 
